@@ -29,6 +29,8 @@ import org.thingsboard.server.service.sync.vc.data.EntitiesExportCtx;
 import java.util.Collections;
 import java.util.Set;
 
+import static org.thingsboard.server.service.sync.ie.importing.impl.DashboardImportService.WIDGET_CONFIG_PROCESSED_FIELDS_PATTERN;
+
 @Service
 @TbCoreComponent
 public class DashboardExportService extends BaseEntityExportService<DashboardId, Dashboard, EntityExportData<Dashboard>> {
@@ -41,11 +43,12 @@ public class DashboardExportService extends BaseEntityExportService<DashboardId,
             });
         }
         for (JsonNode entityAlias : dashboard.getEntityAliasesConfig()) {
-            replaceUuidsRecursively(ctx, entityAlias, Collections.emptySet());
+            replaceUuidsRecursively(ctx, entityAlias, Set.of("id"), null);
         }
         for (JsonNode widgetConfig : dashboard.getWidgetsConfig()) {
-            replaceUuidsRecursively(ctx, JacksonUtil.getSafely(widgetConfig, "config", "actions"), Collections.singleton("id"));
+            replaceUuidsRecursively(ctx, JacksonUtil.getSafely(widgetConfig, "config", "actions"), Collections.emptySet(), WIDGET_CONFIG_PROCESSED_FIELDS_PATTERN);
         }
+        imageService.inlineImages(dashboard);
     }
 
     @Override
